feat : 모자이크 / 편집 선택 액티비티 생성

--- a/presentation/src/main/AndroidManifest.xml
+++ b/presentation/src/main/AndroidManifest.xml
@@ -12,6 +12,12 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
+        <activity
+            android:name="team.jsv.icec.SelectMosaicEditActivity"
+            android:exported="true">
+        </activity>
+
     </application>
 
 </manifest>
