feat : 모자이크 / 편집 분기 UI 제작, fragment navigation 세팅

--- a/presentation/src/main/AndroidManifest.xml
+++ b/presentation/src/main/AndroidManifest.xml
@@ -1,21 +1,23 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <application>
+    <application android:theme="@style/ICECLightTheme">
 
         <activity
             android:name="team.jsv.icec.MainActivity"
             android:exported="true">
+        </activity>
+
+        <activity
+            android:name="team.jsv.icec.ui.activity.SelectMosaicEditActivity"
+            android:exported="true">
+
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
-        </activity>
 
-        <activity
-            android:name="team.jsv.icec.SelectMosaicEditActivity"
-            android:exported="true">
         </activity>
 
     </application>
