모자이크 / 편집 분기 UI (#5)
* feat : ICEC Application Theme 설정

* feat : 모자이크 / 편집 선택 액티비티 생성

* feat : icon 추가

* feat : 모자이크 / 편집 분기 UI 제작, fragment navigation 세팅

--- a/presentation/src/main/AndroidManifest.xml
+++ b/presentation/src/main/AndroidManifest.xml
@@ -6,12 +6,20 @@
         <activity
             android:name="team.jsv.icec.MainActivity"
             android:exported="true">
+        </activity>
+
+        <activity
+            android:name="team.jsv.icec.ui.activity.SelectMosaicEditActivity"
+            android:exported="true">
+
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+
         </activity>
+
     </application>
 
 </manifest>
