베이스 코드 추가 (#6)
* refactor: 패키지 구조 변경

* feat: base 코드들 추가

* feat: BaseFragment에 Navigation 관련 코드 추가

* refactor: @ham2174 리뷰 반영 : binding 해제

* refactor: databinding 누수를 피하도록 변경

--- a/presentation/src/main/AndroidManifest.xml
+++ b/presentation/src/main/AndroidManifest.xml
@@ -4,7 +4,7 @@
     <application android:theme="@style/ICECLightTheme">
 
         <activity
-            android:name="team.jsv.icec.MainActivity"
+            android:name="team.jsv.icec.ui.main.MainActivity"
             android:exported="true">
         </activity>
 
