refactor : 기존 MainActivity(사진 촬영, 갤러리 사진 선택) -> TakePictureActivity 로 변경, SelectMosaicEditActivity(모자이크, 편집 분기 화면) -> MainActivity로 변경

--- a/presentation/src/main/AndroidManifest.xml
+++ b/presentation/src/main/AndroidManifest.xml
@@ -4,12 +4,12 @@
     <application android:theme="@style/ICECLightTheme">
 
         <activity
-            android:name="team.jsv.icec.ui.main.MainActivity"
+            android:name="team.jsv.icec.ui.takepicture.TakePictureActivity"
             android:exported="true">
         </activity>
 
         <activity
-            android:name="team.jsv.icec.ui.activity.SelectMosaicEditActivity"
+            android:name="team.jsv.icec.ui.main.MainActivity"
             android:exported="true">
 
             <intent-filter>
