--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,14 +3,15 @@
     xmlns:tools="http://schemas.android.com/tools"
     package="team.jsv.app">
 
-    <uses-permission android:name="android.permission.INTERNET" />
-    <uses-permission android:name="android.permission.CAMERA" />
-    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"
+        android:maxSdkVersion="32"/>
     <uses-permission android:name="android.permission.READ_MEDIA_IMAGES" />
-
+    <uses-permission android:name="android.permission.INTERNET"/>
+    <uses-permission android:name="android.permission.CAMERA" />
     <uses-feature android:name="android.hardware.camera.any" />
 
     <application
+        android:usesCleartextTraffic="true"
         android:name=".IcekApplication"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
@@ -18,4 +19,5 @@
         android:supportsRtl="true"
         tools:targetApi="33">
     </application>
+
 </manifest>
