--- a/presentation/src/main/AndroidManifest.xml
+++ b/presentation/src/main/AndroidManifest.xml
@@ -6,18 +6,17 @@
         <activity
             android:name="team.jsv.icec.ui.takepicture.TakePictureActivity"
             android:exported="true">
+
         </activity>
 
         <activity
-            android:name="team.jsv.icec.ui.activity.SelectMosaicEditActivity"
+            android:name="team.jsv.icec.ui.main.MainActivity"
             android:exported="true">
-
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
-
         </activity>
 
     </application>
