--- a/presentation/src/main/AndroidManifest.xml
+++ b/presentation/src/main/AndroidManifest.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <application android:theme="@style/ICECLightTheme">
+    <application android:theme="@style/ICECTheme">
 
         <activity
             android:name="team.jsv.icec.ui.takepicture.TakePictureActivity"
