refactor: 클래스 명 변경

--- a/presentation/src/main/AndroidManifest.xml
+++ b/presentation/src/main/AndroidManifest.xml
@@ -4,7 +4,7 @@
     <application android:theme="@style/ICECTheme">
 
         <activity
-            android:name="team.jsv.icec.ui.takepicture.TakePictureActivity"
+            android:name="team.jsv.icec.ui.camera.CameraActivity"
             android:exported="true">
 
         </activity>
