--- a/presentation/src/main/AndroidManifest.xml
+++ b/presentation/src/main/AndroidManifest.xml
@@ -1,16 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <application android:theme="@style/ICECTheme">
-
+    <application>
         <activity
             android:name="team.jsv.icec.ui.camera.CameraActivity"
-            android:exported="true">
-
-        </activity>
-
+            android:theme="@style/ICECCameraTheme"
+            android:exported="false" />
         <activity
             android:name="team.jsv.icec.ui.main.MainActivity"
+            android:theme="@style/ICECTheme"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -18,7 +16,6 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-
     </application>
 
 </manifest>
