--- a/presentation/src/main/AndroidManifest.xml
+++ b/presentation/src/main/AndroidManifest.xml
@@ -1,23 +1,26 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android">
-
-    <application android:theme="@style/ICECTheme" >
+    <application android:theme="@style/ICECTheme">
         <activity
             android:name="team.jsv.icec.ui.camera.CameraActivity"
-            android:theme="@style/ICECCameraTheme"
-            android:exported="true">
-
-
+            android:exported="false"
+            android:theme="@style/ICECCameraTheme">
         </activity>
+
         <activity
             android:name="team.jsv.icec.ui.main.MainActivity"
-            android:theme="@style/ICECTheme"
-            android:exported="true">
+            android:exported="true"
+            android:theme="@style/ICECTheme">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        
+        <activity
+            android:name="team.jsv.icec.ui.main.StartActivity"
+            android:exported="false"
+            android:theme="@style/ICECTheme">
+        </activity>
     </application>
-
 </manifest>
