--- a/presentation/src/main/AndroidManifest.xml
+++ b/presentation/src/main/AndroidManifest.xml
@@ -14,7 +14,7 @@
         </activity>
         
         <activity
-            android:name="team.jsv.icec.ui.main.StartActivity"
+            android:name="team.jsv.icec.ui.main.start.StartActivity"
             android:exported="true"
             android:theme="@style/ICECTheme">
             <intent-filter>
