--- a/.github/workflows/firebase-cd.yml
+++ b/.github/workflows/firebase-cd.yml
@@ -17,6 +17,9 @@ jobs:
         with:
           distribution: zulu
           java-version: 11
+
+      - name: Grant execute permission for gradlew
+        run: chmod +x ./gradlew
           
       - name: Build release APK
         run: ./gradlew assembleRelease
