--- a/.github/workflows/firebase-cd.yml
+++ b/.github/workflows/firebase-cd.yml
@@ -17,6 +17,9 @@ jobs:
         with:
           distribution: zulu
           java-version: 11
+	
+      - name: Use server key from Secrets
+        run: echo "API_URL=$ICEC_SERVER_KEY" >> $GITHUB_ENV
 
       - name: Grant execute permission for gradlew
         run: chmod +x ./gradlew
