--- a/.github/workflows/firebase-cd.yml
+++ b/.github/workflows/firebase-cd.yml
@@ -18,6 +18,9 @@ jobs:
           distribution: zulu
           java-version: 11
 
+      - name: Create google-services.json
+        run: echo "${{ secrets.GOOGLE_SERVICES }}" > app/google-services.json
+
       - name: Access ICEC_SERVER_KEY
         env:
           APOD_API_KEY: $
