--- a/.github/workflows/firebase-cd.yml
+++ b/.github/workflows/firebase-cd.yml
@@ -18,8 +18,12 @@ jobs:
           distribution: zulu
           java-version: 11
 
-      - name: Create google-services.json
-        run: echo "${{secrets.GOOGLE_SERVICES}}" > app/google-services.json
+      - name: Create Google Services
+        run: |
+          echo "$GOOGLE_SERVICES" > google-services.json.b64
+          base64 -d -i google-services.json.b64 > google-services.json
+        env:
+          FIREBASE_CREDENTIALS: ${{secrets.GOOGLE_SERVICES}}
 
       - name: Access ICEC_SERVER_KEY
         env:
