--- a/.github/workflows/firebase-cd.yml
+++ b/.github/workflows/firebase-cd.yml
@@ -21,7 +21,7 @@ jobs:
       - name: Create Google Services
         run: |
           echo "$GOOGLE_SERVICES" > google-services.json.b64
-          base64 -d -i google-services.json.b64 > google-services.json
+          base64 -d -i google-services.json.b64 > app/google-services.json
         env:
           FIREBASE_CREDENTIALS: ${{secrets.GOOGLE_SERVICES}}
 
