--- a/.github/workflows/firebase-cd.yml
+++ b/.github/workflows/firebase-cd.yml
@@ -20,14 +20,14 @@ jobs:
 
       - name: Create Google Services
         run: |
-          echo "$GOOGLE_SERVICES" > google-services.json.b64
-          base64 -d -i google-services.json.b64 > app/google-services.json
+          echo "$GOOGLE_SERVICES" > app/google-services.json.b64
+          base64 -d -i app/google-services.json.b64 > app/google-services.json
         env:
-          FIREBASE_CREDENTIALS: ${{secrets.GOOGLE_SERVICES}}
+          GOOGLE_SERVICES: ${{secrets.GOOGLE_SERVICES}}
 
       - name: Access ICEC_SERVER_KEY
         env:
-          APOD_API_KEY: $
+          ICEC_SERVER_KEY: $
         run: echo ICEC_SERVER_KEY=\"ICEC_SERVER_KEY\" > ./local.properties
 
       - name: Grant execute permission for gradlew
