--- a/.github/workflows/firebase-cd.yml
+++ b/.github/workflows/firebase-cd.yml
@@ -40,6 +40,6 @@ jobs:
         uses: wzieba/Firebase-Distribution-Github-Action@v1
         with:
           appId: ${{secrets.FIREBASE_APP_ID}}
-          token: ${{secrets.FIREBASE_CI_TOKEN}}
+          serviceCredentialsFileContent: ${{secrets.FIREBASE_CREDENTIAL}}
           groups: icec_team
           file: app/build/outputs/apk/release/app-release.apk
