--- a/.github/workflows/firebase-cd.yml
+++ b/.github/workflows/firebase-cd.yml
@@ -25,24 +25,23 @@ jobs:
           echo "$GOOGLE_SERVICES" > app/google-services.json.b64
           base64 -d -i app/google-services.json.b64 > app/google-services.json
 
-      - name: Create KeyStore
+      - name: Create Key Store
+        env:
+          KEY_STORE_BASE_64: ${{secrets.KEY_STORE_BASE_64}}
         run: |
-          echo "$SIGNING_KEY_BASE_64" > ./keystore.jks.b64
-          base64 -d -i ./keystore.jks.b64 > ./keystore.jks
+          echo "$SIGNING_KEY_BASE_64" > | base64 -d > ./keystore.jks
+          
+      - name: Create Key Store Properties
+        env:
+          KEY_STORE_PROPERTIES: ${{secrets.KEY_STORE_PROPERTIES}}
+        run: |
+          echo "$KEY_STORE_PROPERTIES" > ./keystore.properties
 
       - name: Create Local Properties
         env:
           ICEC_SERVER_KEY: ${{secrets.ICEC_SERVER_KEY}}
-          STORE_FILE: keystore.jks
-          STORE_PASSWORD: ${{secrets.KEY_STORE_PASSWORD}}
-          KEY_ALIAS: ${{secrets.ALIAS}}
-          KEY_PASSWORD: ${{secrets.KEY_PASSWORD}}
         run: |
           echo ICEC_SERVER_KEY=\""$ICEC_SERVER_KEY"\" > ./local.properties
-          echo storeFile="$STORE_FILE" >> ./local.properties
-          echo storePassword="$STORE_PASSWORD" >> ./local.properties
-          echo keyAlias="$KEY_ALIAS" >> ./local.properties
-          echo keyPassword="$KEY_PASSWORD" >> ./local.properties
   
       - name: Grant execute permission for gradlew
         run: chmod +x ./gradlew
