--- a/presentation/src/main/AndroidManifest.xml
+++ b/presentation/src/main/AndroidManifest.xml
@@ -14,7 +14,14 @@
             android:exported="false"
             android:theme="@style/ICECTheme">
         </activity>
-        
+
+        <activity
+            android:name="team.jsv.icec.ui.main.MosaicResultActivity"
+            android:exported="false"
+            android:theme="@style/ICECTheme">
+
+        </activity>
+
         <activity
             android:name="team.jsv.icec.ui.main.start.StartActivity"
             android:exported="true"
