--- a/presentation/src/main/AndroidManifest.xml
+++ b/presentation/src/main/AndroidManifest.xml
@@ -14,7 +14,14 @@
             android:exported="false"
             android:theme="@style/ICECTheme">
         </activity>
-        
+
+        <activity
+            android:name="team.jsv.icec.ui.main.MosaicResultActivity"
+            android:exported="false"
+            android:theme="@style/ICECTheme">
+
+        </activity>
+
         <activity
             android:name="team.jsv.icec.ui.main.start.StartActivity"
             android:exported="true"
@@ -26,6 +33,16 @@
             </intent-filter>
 
         </activity>
+
+        <provider
+            android:name="androidx.core.content.FileProvider"
+            android:authorities="com.example.fileprovider"
+            android:exported="false"
+            android:grantUriPermissions="true">
+            <meta-data
+                android:name="android.support.FILE_PROVIDER_PATHS"
+                android:resource="@xml/file_path" />
+        </provider>
 
     </application>
 
