--- a/presentation/src/main/AndroidManifest.xml
+++ b/presentation/src/main/AndroidManifest.xml
@@ -2,7 +2,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="team.jsv.icec">
 
-    <application>
+    <application android:theme="@style/ICECTheme">
 
         <activity
             android:name="team.jsv.icec.ui.SplashActivity"
